gcc/testsuite/rust/rustc/ui/issues/issue-10656.rs
#![deny(missing_docs)]
#![crate_type="lib"]
// { dg-error "" "" { target *-*-* } .-2 }

